--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -1,7 +1,11 @@
 <html>
     <head>
+        <script src="/static/js/vue.js"></script>
     </head>
     <body>
-        <p>Hello</p>
+        <div id="app">
+            <h1>{{ world }}</h1>
+        </div>
     </body>
+    <script src="/static/js/main.js"></script>
 </html>
