--- a/nestegg/templates/theme/sign-in.html
+++ b/nestegg/templates/theme/sign-in.html
@@ -80,7 +80,7 @@
 	</header>
 	<footer>
 		<div class="container">
-			<p>Copyright &copy; 2016 First National Bank of Omaha. All Rights Reserved. <a id="footer_link" href="https://www.firstnational.com/comp/popups/privacy-policy.fhtml">Privacy</a></p>
+			<p id="footer-label">Copyright &copy; 2016 First National Bank of Omaha. All Rights Reserved. <a id="footer_link" href="https://www.firstnational.com/comp/popups/privacy-policy.fhtml">Privacy</a></p>
 		</div>
 	</footer>
 
