--- a/nestegg/templates/theme/create-goal.html
+++ b/nestegg/templates/theme/create-goal.html
@@ -9,11 +9,11 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Bank Accounts</title>
+<title>Create Goal</title>
 
 <!-- Bootstrap Core CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -50,7 +50,19 @@
 			</button>
 			<a class="navbar-brand page-scroll" href="/">Nest Egg</a>
 		</div>
-
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="/account.html">Accounts</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/create-goal.html">Create Goal</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
 	</div>
 	<!-- /.container-fluid -->
 </nav>
@@ -59,28 +71,11 @@
 	<div class="container">
 		<div class="row">
 			<div id="boxy_box" class="col-lg-12 col-md-12 col-sm-12">
-				<div class="holding"><h1 class="main_head">Accounts</h1><div class="line"></div></div>
-				<h2>Checking</h2>
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>Bucket</th>
-							<th>% Used</th>
-						</tr>
-					</thead>
-					<tbody>
-					<tr>
-						<td>Gas</td>
-						<td>20%</td>
-					</tr>
-					<tr>
-						<td>Rent</td>
-						<td>100%</td>
-					</tr>
-					<tr class="table_form">
-							<td>
-								<!--This is for the changing of the amount in the bucket-->
-								<form class="form-inline input_goal">
+				<div class="holding"><h1 class="main_head">Create Goal</h1><div class="line_goal"></div></div>
+
+
+
+								<input class="signin" name="bucket_name" placeholder="Enter Name of the Category" type="text">
 									<div class="form-group">
 										<label class="sr-only" for="exampleInputAmount">Current Amount(in dollars)</label>
 										<div class="input-group">
@@ -89,55 +84,31 @@
 											<div class="input-group-addon">.00</div>
 										</div>
 									</div>
-									<button type="submit" id="goal_change" class="btn btn-primary">Change Goal</button>
+									<button type="submit" id="goal_create"  class="btn btn-primary">Set Goal</button>
 								</form>
-							</td>
-							<td><div class="entry_group">100%</div></td>
-						</tr>
-					</tbody>
 
-				</table>
-				<h2>Savings</h2>
+				<h2 class="existing_categories">Existing Categories</h2><!--<div class="line"></div>-->
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th>Bucket</th>
+							<th>Name</th>
+							<th>Total</th>
 							<th>% Used</th>
 						</tr>
 					</thead>
 					<tbody>
 					<tr>
-						<td>Gas</td>
-						<td>20%</td>
+						<td>Bucket Name</td>
+						<td>$105.00</td>
+						<td>72%</td>
 					</tr>
 					<tr>
-						<td>Rent</td>
-						<td>100%</td>
+						<td>Bucket Name</td>
+						<td>$105.00</td>
+						<td>72%</td>
 					</tr>
 					</tbody>
-
 				</table>
-				<h2 class="head">Transactions</h2><!--<div class="line"></div>-->
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>#</th>
-							<th>Name</th>
-							<th>Type</th>
-							<th>Amount</th>
-						</tr>
-					</thead>
-					<tbody>
-					<tr>
-						<td>1</td>
-						<td>Transaction Name</td>
-						<td>Type</td>
-						<td>$Amount</td>
-					</tr>
-					</tbody>
-
-				</table>
-
 			</div>
 		</div>
 	</div>
@@ -145,15 +116,15 @@
 	</header>
 	<footer>
 <div class="container">
-	<p>Copyright &copy; 2016 First National Bank of Omaha. All Rights Reserved. <a id="footer_link" href="https://www.firstnational.com/comp/popups/privacy-policy.fhtml">Privacy</a></p>
+	<p id="footer-label">Copyright &copy; 2016 First National Bank of Omaha. All Rights Reserved. <a id="footer_link" href="https://www.firstnational.com/comp/popups/privacy-policy.fhtml">Privacy</a></p>
 </div>
 	</footer>
 
 	<!-- jQuery -->
-	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="js/jquery/jquery.js"></script>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 
 	<!-- Plugin JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
