--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -1,11 +1,11 @@
-<html>
-    <head>
-        <script src="/static/js/vue.js"></script>
-    </head>
-    <body>
-        <div id="app">
-            <h1>{{ world }}</h1>
-        </div>
-    </body>
-    <script src="/static/js/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>NestEgg</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/static/dist/build.js"></script>
+  </body>
 </html>
