--- a/nestegg/templates/theme/create-goal.html
+++ b/nestegg/templates/theme/create-goal.html
@@ -72,10 +72,8 @@
 		<div class="row">
 			<div id="boxy_box" class="col-lg-12 col-md-12 col-sm-12">
 				<div class="holding"><h1 class="main_head">Create Goal</h1><div class="line_goal"></div></div>
-
-
-
-								<input class="signin" name="bucket_name" placeholder="Enter Name of the Category" type="text">
+						<div id="create_hold">
+								<input class="signin" id="cat_name" name="bucket_name" placeholder="Enter Name of the Category" type="text">
 									<div class="form-group">
 										<label class="sr-only" for="exampleInputAmount">Current Amount(in dollars)</label>
 										<div class="input-group">
@@ -84,9 +82,10 @@
 											<div class="input-group-addon">.00</div>
 										</div>
 									</div>
-									<button type="submit" id="goal_create"  class="btn btn-primary">Set Goal</button>
+									<center><button type="submit" id="goal_create"  class="btn btn-primary">Set Goal</button></center>
 								</form>
 
+							</div>
 				<h2 class="existing_categories">Existing Categories</h2><!--<div class="line"></div>-->
 				<table class="table table-hover">
 					<thead>
