--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -84,6 +84,7 @@
 	<div class="container">
 		<div class="row">
 			<div id="boxy_box" class="col-lg-12 col-md-12 col-sm-12">
+                <h1>{{ global.budget }}</h1>
                 <router-view class="view"></router-view>
             </div>
 		</div>
