--- a/nestegg/static/css/add.css
+++ b/nestegg/static/css/add.css
@@ -69,14 +69,15 @@
 	margin-top:37px;
 	margin-bottom:50px;
 	height:3px;
-	width:83%%;
+	width:68%;
 	float:right;
 }
+
 .main_head{
 	float:left;
 	margin-bottom:30px;
-
 }
+
 #holding{
 	float:none;
 	height:50px!important;
