added bucket display and adding

--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -53,6 +53,9 @@
                             <li>
                                 <router-link to="/transactions">Transactions</router-link>
                             </li>
+                            <li>
+                                <router-link to="/bucket">Buckets</router-link>
+                            </li>
                         </ul>
                     </div>
                 </div>
