--- a/nestegg/static/css/add.css
+++ b/nestegg/static/css/add.css
@@ -162,3 +162,7 @@ h1,h2,h3,h4,p,table{
 	  font-family: 'Avenir Next Pro';
 		src: url("font/AvenirNextLTPro-Regular.otf"); /* File to be stored at your site */
 }
+
+div#app {
+    height:100%;
+}
