--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="static/css/add.css">
 
         <!-- Theme CSS -->
-        <link href="static/css/new-age.min.css" rel="stylesheet">
+        <link href="static/css/new-age.css" rel="stylesheet">
 
     </head>
 
