--- a/nestegg/static/css/add.css
+++ b/nestegg/static/css/add.css
@@ -146,14 +146,14 @@ footer > p{
 }
 */
 
-p{
+p {
 	font-size:15px!important;
 	margin-bottom:5px!important;
 
 }
 
 
-h1,h2,h3,h4,p,table{
+h1,h2,h3,h4,p,table {
 	font-family: "Avenir Next Pro" !important;
 	color:green!important;
 }
@@ -165,4 +165,9 @@ h1,h2,h3,h4,p,table{
 
 div#app {
     height:100%;
+}
+
+header {
+  background: url("/static/img/bg-pattern.png"), linear-gradient(to left, #006633, #00AD57)!important;
+  background: url("/static/img/bg-pattern.png"), -webkit-linear-gradient(to left, #006633, #00AD57)!important;
 }
