--- a/nestegg/templates/theme/account.html
+++ b/nestegg/templates/theme/account.html
@@ -188,7 +188,7 @@
 	</footer>
 
 	<!-- jQuery -->
-	<script src="js/jquery/jquery.js"></script>
+	<script src="js/jquery.js"></script>
 
 	<!-- Bootstrap Core JavaScript -->
 	<script src="js/bootstrap.min.js"></script>
