--- a/nestegg/templates/index.html
+++ b/nestegg/templates/index.html
@@ -74,6 +74,9 @@
 
             <!-- Theme JavaScript -->
             <script src="/static/dist/build.js"></script>
+            <script src="/static/js/jquery.js"></script>
+            <script src="/static/js/new-age.min.js"></script>
+						<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         </div>
     </body>
 
