--- a/nestegg/static/css/add.css
+++ b/nestegg/static/css/add.css
@@ -69,15 +69,14 @@
 	margin-top:37px;
 	margin-bottom:50px;
 	height:3px;
-	width:68%;
+	width:83%%;
 	float:right;
 }
-
 .main_head{
 	float:left;
 	margin-bottom:30px;
-}
 
+}
 #holding{
 	float:none;
 	height:50px!important;
@@ -156,7 +155,11 @@ p {
 
 h1,h2,h3,h4,p,table {
 	font-family: "Avenir Next Pro" !important;
-	color:green!important;
+	color:#000;
+}
+
+h1, h2, h3, h4 {
+    color: #006633;
 }
 
 @font-face {
